--- a/main.css
+++ b/main.css
@@ -1020,3 +1020,23 @@ a:hover
         top: 0;
     }
 }
+
+/* Background image for the main content */
+.background-img {
+    background-image: url('assets/img/background.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+/* Background image for the card */
+.card-background {
+    background-image: url('assets/img/card-background.jpg');
+    background-size: cover;
+    background-position: center;
+}
