--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,14 @@ section, summary, time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
+body {
+    background-image: url("assets/images/bg01.jpg"); /* Set the default background */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 
 body {
   line-height: 1; }
