--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,20 +135,23 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1; }
+  overflow: hidden; 	
+  z-index: -1; }
   #bg div {
     -moz-transition: opacity 3s ease;
     -webkit-transition: opacity 3s ease;
     -ms-transition: opacity 3s ease;
-    transition: opacity 3s ease;
+    transition: opacity 1s ease-in-out;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;	  
     height: 100%;
     left: 0;
     opacity: 0;
     position: absolute;
     top: 0;
     visibility: hidden;
-    width: 150%; }
+    width: 100%; }
     #bg div.visible {
       -moz-animation: bg 45s linear infinite;
       -webkit-animation: bg 45s linear infinite;
