--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .hero {
     background-color: #2c3e50; /* A dark grayish blue, similar to the example */
-    background-image: images/image-01.jpg('image-01.jpg'); /* Updated to use your image name */
+    background-image: url('image-01.jpg'); /* Updated to use your image name */
     background-size: cover;
     background-position: center;
     color: white;
